# tracer-r

./: .gitignore  Cargo.toml  README.md  tracer-r-mpi.d  tracer-r.d
presentation/: graph.ods  math-424-final.odp  math-424-final.pptx  presentation.odp  writeup.odt
src/: bounded_volume_hierarchy.rs  camera.rs  drawable.rs  image_handling.rs  lib.rs  main.rs  material.rs  partitionable.rs  prelude.rs  primitives.rs  ray.rs  raytracer.rs  sphere.rs  traits.rs  utils.rs  vectors.rs
