[package]
name = "tracer-r"
version = "0.1.0"
edition = "2021"
authors = ["Brennan Seymour <brenno263@gmail.com>"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
image = "0.24.3"
num = "0.4.0"
rand = "0.8.5"
rayon = "1.6.0"
partition = "0.1.2"
